tests/fail/reserved_keyword_without_quotes.rs
concat_idents::concat_idents!(fn_name = struct {
    fn fn_name() {
        /* reserved key-words cannot be used as idents */
    }
});

fn main() {}
